--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,43 @@
         </dependency>
   </dependencies>
   <build>
-    <finalName>ALZ1</finalName>
-  </build>
+        <finalName>ALZ1</finalName>
+        <plugins>
+            <!-- Maven Compiler Plugin -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.8.1</version>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                </configuration>
+            </plugin>
+
+            <!-- Maven War Plugin -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-war-plugin</artifactId>
+                <version>3.3.1</version>
+            </plugin>
+            
+            <plugin>
+<groupId>com.microsoft.azure</groupId>
+<artifactId>azure-webapp-maven-plugin</artifactId>
+<version>2.13.0</version>
+</plugin>
+
+            <!-- Tomcat Maven Plugin -->
+            <plugin>
+                <groupId>org.apache.tomcat.maven</groupId>
+                <artifactId>tomcat7-maven-plugin</artifactId>
+                <version>2.2</version>
+                <configuration>
+                    
+                    <server>TomcatServer</server>
+                    <path>/ALZ1</path>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
